--- a/anagram.css
+++ b/anagram.css
@@ -1,3 +1,35 @@
 body {
+	background-color: lightgrey;
+}
+
+#main {
 	background-color: grey;
+	width:100%;
+	text-align: center;
+	height:700px;
+	padding-top:100px;
+}
+
+header {
+	width:100%;
+	background-color: lightgrey;
+	height:120px;
+	font-size: 60px;
+	font-family: "Open Sans";
+	text-align:center;
+	margin-top:0px;
+	padding-top:0px;
+	font-weight:bold;
+}
+
+.input {
+	height:50px;
+	width: 320px;
+	margin:20px;
+	font-size:32px;
+}
+
+#submit {
+	width:100px;
+	height:60px;
 }
