--- a/anagram.css
+++ b/anagram.css
@@ -1,5 +1,6 @@
 body {
 	background-color: lightgrey;
+	font-family: "Open Sans"
 }
 
 #main {
@@ -29,7 +30,18 @@ header {
 	font-size:32px;
 }
 
-#submit {
-	width:100px;
-	height:60px;
+button {
+	width:180px;
+	height:45px;
 }
+#result {
+	text-align:center;
+	color:white;
+}
+
+@media screen and (max-width: 768px) {   
+    
+    header {
+    	font-size:40px;
+    }
+} 
