--- a/anagram.css
+++ b/anagram.css
@@ -26,17 +26,23 @@ header {
 .input {
 	height:50px;
 	width: 320px;
-	margin:20px;
+	margin:10px;
 	font-size:32px;
+
+
 }
 
 button {
 	width:180px;
 	height:45px;
+	margin-top:10px;
+	border-radius: 10px;
+	font-size:24px;
 }
 #result {
 	text-align:center;
 	color:white;
+	font-size:24px;
 }
 
 @media screen and (max-width: 768px) {   
