--- a/anagram.css
+++ b/anagram.css
@@ -45,7 +45,7 @@ button {
 	font-size:24px;
 }
 
-@media screen and (max-width: 768px) {   
+@media screen and (max-width: 768px), screen and (max-device-width: 768px) {   
     
     header {
     	font-size:40px;
